--- a/Minecraft"BLIBLIOTHEQUE"DP.html
+++ b/Minecraft"BLIBLIOTHEQUE"DP.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliothèque Défilante</title>
     <style>
-        /* Styles pour le texte défilant */
+       
         .marquee {
-            font-size: 50px; /* Taille du texte */
-            font-weight: bold; /* Texte en gras */
-            color: #333; /* Couleur du texte */
-            overflow: hidden; /* Masque le texte qui déborde */
-            white-space: nowrap; /* Empêche le retour à la ligne */
+            font-size: 50px; 
+            font-weight: bold; 
+            color: #333;
+            overflow: hidden; 
+            white-space: nowrap;
             box-sizing: border-box;
-            animation: marquee 10s linear infinite; /* Animation continue */
+            animation: marquee 10s linear infinite; 
         }
 
-        /* Animation de défilement */
+       
         @keyframes marquee {
             0% {
-                transform: translateX(100%); /* Commence hors de l'écran à droite */
+                transform: translateX(100%); 
             }
             100% {
-                transform: translateX(-100%); /* Finit hors de l'écran à gauche */
+                transform: translateX(-100%);
             }
         }
     </style>
