--- a/Minecraft"BLIBLIOTHEQUE"DP.html
+++ b/Minecraft"BLIBLIOTHEQUE"DP.html
@@ -5,33 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliothèque Défilante</title>
     <style>
-       
         .marquee {
-            font-size: 50px; 
-            font-weight: bold; 
+            font-size: 50px;
+            font-weight: bold;
             color: #333;
-            overflow: hidden; 
             white-space: nowrap;
-            box-sizing: border-box;
-            animation: marquee 10s linear infinite; 
+            overflow: hidden;
         }
 
-       
+        .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            animation: marquee 10s linear infinite;
+        }
+
         @keyframes marquee {
-            0% {
-                transform: translateX(100%); 
-            }
-            100% {
-                transform: translateX(-100%);
-            }
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-100%); }
         }
     </style>
 </head>
 <body>
 
-    <div class="marquee">Bibliothèque</div>
+    <div class="marquee">
+        <span>Bibliothèque</span>
+    </div>
 
 </body>
 </html>
+
 
 
