--- a/Minecraft"BLIBLIOTHEQUE"DP.html
+++ b/Minecraft"BLIBLIOTHEQUE"DP.html
@@ -9,27 +9,14 @@
             font-size: 50px;
             font-weight: bold;
             color: #333;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .marquee span {
-            display: inline-block;
-            padding-left: 100%;
-            animation: marquee 10s linear infinite;
-        }
-
-        @keyframes marquee {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
         }
     </style>
 </head>
 <body>
 
-    <div class="marquee">
-        <span>Bibliothèque</span>
-    </div>
+    <marquee class="marquee" behavior="scroll" direction="left" scrollamount="10">
+        Bibliothèque
+    </marquee>
 
 </body>
 </html>
