--- a/Minecraft"BLIBLIOTHEQUE"DP.html
+++ b/Minecraft"BLIBLIOTHEQUE"DP.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bibliothèque Défilante</title>
+    <title>Bibliothèque</title>
     <style>
-        .marquee {
+        .centered-text {
             font-size: 50px;
             font-weight: bold;
             color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
     </style>
 </head>
 <body>
 
-    <marquee class="marquee" behavior="scroll" direction="left" scrollamount="10">
+    <div class="centered-text">
         Bibliothèque
-    </marquee>
+    </div>
 
 </body>
 </html>
+
 
 
 
